--- a/src/scss/base/forms/button.scss
+++ b/src/scss/base/forms/button.scss
@@ -2,13 +2,29 @@
 // Снипет (HTML): btn
 
 .button {
-	display: inline-flex;
-	padding: 0px 0px;
-	@media (any-hover: hover) {
-		&:hover {
-		}
-	}
-	&._fw {
-		width: 100%;
-	}
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: rem(5) rem(20);
+    background: $primary-1;
+    border-radius: rem(5);
+    min-height: rem(50);
+
+    color: $white;
+    font-size: rem(18);
+    line-height: math.div(25, 18);
+
+    &_bold {
+        font-weight: 700;
+        font-size: rem(20);
+        line-height: math.div(27, 20);
+    }
+
+    transition: background-color 0.3s ease 0s;
+    @media (any-hover: hover) {
+        &:hover {
+            background-color: $secondary-1;
+        }
+    }
 }
