--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,54 +1,209 @@
 //====================================================================================================
+.header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    &::before {
+        @media (max-width: $mobile) {
+            content: "";
+            position: fixed;
+            width: 100%;
+            height: rem(100);
+            top: 0;
+            right: -100%;
+            background-color: $secondary-2;
+            transition: right 0.5s ease 0s;
+            .menu-open & {
+                right: 0;
+            }
+        }
+    }
+    &__container {
+        display: flex;
+        align-items: center;
+        padding-top: rem(5);
+        padding-bottom: rem(5);
+        @include adaptiveValue("min-height", 160, 90, 1200, 991.98, 1);
+        @include adaptiveValue("gap", 70, 30, 1200, 767.98, 1);
+    }
+
+    &__logo {
+        position: relative;
+        z-index: 2;
+        flex: 0 0 rem(62);
+    }
+
+    &__menu {
+        flex: 1 1 auto;
+    }
+
+    &__buttons {
+        position: relative;
+        z-index: 2;
+        @media (min-width: $mobile) {
+            flex: 0 0 rem(235);
+        }
+    }
+
+    &__icon {
+    }
+}
+.menu {
+    &__body {
+        @media (max-width: $tablet) {
+            padding: rem(20) rem(15);
+            min-width: rem(320);
+            top: rem(100);
+            right: rem(-400);
+            position: fixed;
+            overflow: auto;
+            background-color: $secondary-2;
+            border-radius: rem(5);
+            transition: right 0.5s ease 0s;
+            .menu-open & {
+                right: rem(15);
+            }
+        }
+        @media (max-width: $mobile) {
+            padding: rem(120) rem(15) rem(30) rem(15);
+            min-width: 0;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            right: -100%;
+            display: flex;
+            flex-direction: column;
+            gap: rem(30);
+            .menu-open & {
+                right: rem(0);
+                opacity: 1;
+                visibility: visible;
+            }
+        }
+    }
+
+    &__list {
+        @media (min-width: $tablet) {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            @include adaptiveValue("gap", 35, 20, 1200, 767.98, 1);
+        }
+        @media (max-width: $mobile) {
+            flex: 1 1 auto;
+        }
+    }
+
+    &__item {
+        @media (min-width: $tablet) {
+            padding: rem(5) 0;
+        }
+        @media (max-width: $tablet) {
+            &:not(:last-child) {
+                margin-bottom: rem(15);
+            }
+        }
+        @media (max-width: $tablet) {
+            &:not(:last-child) {
+                margin-bottom: rem(20);
+            }
+        }
+    }
+
+    &__link {
+        font-size: rem(18);
+        line-height: math.div(25, 18);
+        color: $white;
+
+        @media (max-width: $tablet) {
+            font-size: rem(20);
+        }
+
+        @media (max-width: $mobile) {
+            font-size: rem(24);
+        }
+
+        transition: color 0.3s ease 0s;
+        @media (any-hover: hover) {
+            &:hover {
+                color: $primary-2;
+            }
+        }
+    }
+}
+.buttons-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    @media (max-width: $mobile) {
+        justify-content: center;
+    }
+    gap: rem(25);
+    &__sign-in {
+        font-size: rem(18);
+        line-height: math.div(25, 18);
+        color: $white;
+        transition: color 0.3s ease 0s;
+        @media (any-hover: hover) {
+            &:hover {
+                color: $primary-2;
+            }
+        }
+    }
+
+    &__sign-up {
+        min-height: rem(58);
+        flex: 0 0 rem(152);
+    }
+}
 
 //====================================================================================================
 
-//Burger
-/*
 .icon-menu {
-	display: none;
-	@media (max-width: $mobile) {
-		display: block;
-		position: relative;
-		width: rem(30);
-		height: rem(18);
-		cursor: pointer;
-		z-index: 5;
-		span,
-		&::before,
-		&::after {
-			content: "";
-			transition: all 0.3s ease 0s;
-			right: 0;
-			position: absolute;
-			width: 100%;
-			height: rem(2);
-			background-color: #000;
-		}
-		&::before {
-			top: 0;
-		}
-		&::after {
-			bottom: 0;
-		}
-		span {
-			top: calc(50% - rem(1));
-		}
-		.menu-open & {
-			span {
-				width: 0;
-			}
-			&::before,
-			&::after {
-			}
-			&::before {
-				top: calc(50% - rem(1));
-				transform: rotate(-45deg);
-			}
-			&::after {
-				bottom: calc(50% - rem(1));
-				transform: rotate(45deg);
-			}
-		}
-	}
+    display: none;
+    @media (max-width: $tablet) {
+        display: block;
+        position: relative;
+        flex: 0 0 rem(35);
+        height: rem(26);
+        cursor: pointer;
+        z-index: 5;
+        span,
+        &::before,
+        &::after {
+            border-radius: rem(5);
+            content: "";
+            transition: all 0.5s ease 0s;
+            right: 0;
+            position: absolute;
+            height: rem(2);
+            width: 100%;
+            background-color: $white;
+        }
+        &::before {
+            top: 0;
+        }
+        &::after {
+            bottom: 0;
+        }
+        span {
+            width: rem(26);
+            top: calc(50% - rem(1));
+        }
+        .menu-open & {
+            span {
+                width: 0;
+            }
+            &::before {
+                top: calc(50% - rem(1));
+                transform: rotate(-45deg);
+            }
+            &::after {
+                bottom: calc(50% - rem(1));
+                transform: rotate(45deg);
+            }
+        }
+    }
 }
-*/
