--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -145,3 +145,10 @@ body {
 
 // Подключение стилей отдельных страниц
 @import "home";
+
+//========================================================================================================================================================
+
+.page {
+    &__start {
+    }
+}
