--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -5,21 +5,47 @@
     top: 0;
     left: 0;
     z-index: 100;
+    &::after {
+        content: "";
+        position: fixed;
+        width: 100%;
+        height: rem(80);
+        top: 0;
+        right: 0;
+        background-color: $secondary-2;
+        transition: all 0.5s ease 0s;
+        opacity: 0;
+        visibility: hidden;
+        @media (max-width: $mobileSmall) {
+            height: rem(60);
+        }
+    }
+    &._header-scroll {
+        &::after {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+
     &::before {
         @media (max-width: $mobile) {
             content: "";
             position: fixed;
             width: 100%;
-            height: rem(100);
+            height: rem(80);
             top: 0;
             right: -100%;
             background-color: $secondary-2;
-            transition: right 0.5s ease 0s;
+            transition: all 0.5s ease 0s;
             .menu-open & {
                 right: 0;
             }
         }
+        @media (max-width: $mobileSmall) {
+            height: rem(60);
+        }
     }
+
     &__container {
         display: flex;
         align-items: center;
@@ -27,6 +53,12 @@
         padding-bottom: rem(5);
         @include adaptiveValue("min-height", 160, 90, 1200, 991.98, 1);
         @include adaptiveValue("gap", 70, 30, 1200, 767.98, 1);
+        @media (max-width: $mobile) {
+            min-height: rem(70);
+        }
+        @media (max-width: $mobileSmall) {
+            min-height: rem(50);
+        }
     }
 
     &__logo {
@@ -67,7 +99,7 @@
             }
         }
         @media (max-width: $mobile) {
-            padding: rem(120) rem(15) rem(30) rem(15);
+            padding: rem(100) rem(15) rem(30) rem(15);
             min-width: 0;
             width: 100%;
             height: 100%;
@@ -81,6 +113,9 @@
                 opacity: 1;
                 visibility: visible;
             }
+        }
+        @media (max-width: $mobileSmall) {
+            padding: rem(80) rem(15) rem(30) rem(15);
         }
     }
 
