--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -425,3 +425,84 @@
         }
     }
 }
+
+//========================================================================================================================================================
+
+.register {
+    @include adaptiveValue("padding-top", 80, 40, 1200, 767.98, 1);
+    @include adaptiveValue("padding-bottom", 80, 40, 1200, 767.98, 1);
+    &__container {
+    }
+
+    &__wrapper {
+        background: linear-gradient(89.97deg, #ae67fa 1.84%, #f49867 102.67%);
+        border: rem(1) solid $black;
+        box-shadow: 0px rem(4) rem(4) rgba(0, 0, 0, 0.25);
+        border-radius: rem(10);
+        padding: rem(40);
+
+        display: flex;
+        gap: rem(20);
+        @media (max-width: $tablet) {
+            padding: rem(30);
+        }
+        @media (max-width: $mobile) {
+            flex-wrap: wrap;
+        }
+        @media (max-width: $mobileSmall) {
+            margin: 0px rem(-15);
+            padding: rem(20) rem(15);
+            border-radius: 0;
+        }
+    }
+
+    &__header {
+        @media (min-width: $mobile) {
+            flex: 1 1 auto;
+        }
+    }
+
+    &__label {
+        font-size: rem(12);
+        line-height: math.div(16, 12);
+        color: $black;
+        &:not(:last-child) {
+            margin-bottom: rem(5);
+        }
+    }
+
+    &__title {
+        font-weight: 800;
+        @include adaptiveValue("font-size", 24, 20);
+        line-height: math.div(36, 24);
+        color: $black;
+    }
+
+    &__button {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        min-height: rem(60);
+        padding: rem(5) rem(40);
+        min-width: rem(170);
+        background-color: $black;
+        border-radius: rem(40);
+        font-size: rem(18);
+        line-height: math.div(30, 18);
+        font-weight: 700;
+        color: $white;
+        transition: all 0.3s ease 0s;
+        border: rem(2) solid transparent;
+        @media (any-hover: hover) {
+            &:hover {
+                color: $black;
+                border: rem(2) solid $black;
+                background-color: transparent;
+            }
+        }
+        @media (max-width: $mobileSmall) {
+            width: 100%;
+        }
+    }
+}
