--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -115,6 +115,8 @@
     }
 }
 
+//========================================================================================================================================================
+
 .feature {
     &__title {
     }
